tests/miniJava/neg/004267_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { false public int [] java ( ) { return 0 ; } }
